--- a/style.css
+++ b/style.css
@@ -771,6 +771,19 @@
     font-size:150%;
   }
 
+  .the_button{
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 50px;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #70778E;
+  }
+
   /* End of base css */
   /* ==================================================================================================================================================== */
   /* ==================================================================================================================================================== */
