--- a/thirdpage.css
+++ b/thirdpage.css
@@ -429,12 +429,80 @@
     margin-bottom:55%;
   }
 
+    /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ====================================================================================================================================================n */
+  /* background onwards */
+
+  .background_header{
+    background-color:#282834;
+    font-size: 200%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+    padding-top:2%;
+    padding-bottom:2%;
+  }
+
+  .background_header h1{
+    margin-left: 5%;
+    margin-right: 5%;
+    font-size: 200%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: white;
+  }
+
+  .covid_intro{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .info_intro{
+    flex: 50%;
+    max-width: 50%;
+    background-color:#03A89E;
+    opacity:90%;
+  }
+  
+  .earth_1_image {
+    float:center;
+    width: 50%;
+    height:85%;
+    margin-left:25%;
+    margin-top: 4%;
+    opacity:90%;
+    } 
+ 
+   .info_intro p{
+     background-color:#03A89E;
+     font-weight: bold;
+     font-family: 'Courier New', Courier, monospace;
+     color:white;
+     text-align: center;
+     margin-top:11%;
+     margin-right:20%;
+     font-size:150%;
+   }
+
   /* End of base css */
   /* ==================================================================================================================================================== */
   /* ==================================================================================================================================================== */
   /* ==================================================================================================================================================== */
   /* ====================================================================================================================================================n */
   /* start of media screen at 1600px */
+  @media screen and (max-width:1600px){
+
+    /* background header */
+    .info_intro p{
+      font-size:135%;
+    }
+
+  }
+
 
   @media screen and (max-width:1400px){
     /*container*/
@@ -450,14 +518,31 @@
             padding-bottom:65%;
           }
 
+    /* background header onwards */
+    .earth_1_image {
+      float:center;
+      width: 50%;
+      height:75%;
+      margin-left:25%;
+      margin-top: 9%;
+      } 
+
+    .info_intro p{
+      font-size:135%;
+    }
   }
 
   @media screen and (max-width:1150px){
 
+    /* background header onwards */
+    .info_intro p{
+      font-size:120%;
+    }    
+
     /* container */
     .container{
       padding-bottom:70%;
-    }
+    }  
     
   }  
 
@@ -480,6 +565,27 @@
       top: 30%;
       margin-left:-10%;
     }
+
+    /* background header onwards */
+    .background_header{
+      margin-left:0%;
+      margin-right:0%;
+    }
+
+    .covid_info{
+      margin-left:0%;
+      margin-right:0%;
+    }
+
+    .earth_1_image{
+      width: 65%;
+      height:75%;
+      margin-left:18%;
+      margin-top: 12%;
+    }
+    .info_intro p{
+      font-size:110%;
+    }    
 }
 
 @media screen and (max-width:930px){
@@ -510,7 +616,24 @@
 }
 
 @media screen and (max-width:721px){
+    /* background header onwards */
+    .earth_1_image{
+      width: 65%;
+      height:65%;
+      margin-left:18%;
+      margin-top: 5%;
+    }
 
+    .info_intro{
+      flex: 100%;
+      max-width: 100%;
+    }
+
+    .info_intro p{
+      margin-left:20%;
+      margin-top:-15%;
+    }
+    
 /* container */
 .container{
     padding-bottom:153%;
@@ -521,6 +644,7 @@
 }
 
 @media screen and (max-width:458px){
+
 
 /* container */
 .top-left {
@@ -547,6 +671,11 @@
 .container{
     padding-bottom:220%;
 }
+
+    /* background header onwards */
+    .info_intro p{
+      margin-top:-35%;
+    }
 
 }
 
