treatment and vaccine responsive

--- a/thirdpage.css
+++ b/thirdpage.css
@@ -532,6 +532,82 @@
      font-size:150%;
    } 
 
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ====================================================================================================================================================n */
+  /* spread onwards */
+  
+  .covid_spread{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .info_spread{
+    flex: 50%;
+    max-width: 50%;
+    background-color:white;
+    opacity:90%;
+  }
+  
+  .spread_1_image {
+    float:center;
+    width: 50%;
+    height:85%;
+    margin-left:25%;
+    margin-top: 4%;
+    opacity:90%;
+    } 
+ 
+   .info_spread p{
+     background-color:white;
+     font-weight: bold;
+     font-family: 'Courier New', Courier, monospace;
+     color:black;
+     text-align: center;
+     margin-top:11%;
+     margin-right:20%;
+     font-size:150%;
+   } 
+   
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ==================================================================================================================================================== */
+  /* ====================================================================================================================================================n */
+  /* treatments onwards */
+  
+  .covid_cure{
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .info_cure{
+    flex: 50%;
+    max-width: 50%;
+    background-color:#03A89E;
+    opacity:90%;
+  }
+  
+  .cure_1_image {
+    float:center;
+    width: 50%;
+    height:85%;
+    margin-left:15%;
+    margin-top: 4%;
+    opacity:90%;
+    } 
+ 
+   .info_cure p{
+     background-color:#03A89E;
+     font-weight: bold;
+     font-family: 'Courier New', Courier, monospace;
+     color:white;
+     text-align: center;
+     margin-top:11%;
+     margin-left:20%;
+     font-size:150%;
+   }    
+
   /* End of base css */
   /* ==================================================================================================================================================== */
   /* ==================================================================================================================================================== */
@@ -546,6 +622,14 @@
     }
 
     .info_origins p{
+      font-size:135%;
+    }
+
+    .info_spread p{
+      font-size:135%;
+    }
+
+    .info_cure p{
       font-size:135%;
     }
 
@@ -590,6 +674,31 @@
     .info_origins p{
       font-size:135%;   
     }
+
+    .spread_1_image{
+      float:center;
+      width: 50%;
+      height:75%;
+      margin-left:25%;
+      margin-top: 9%;      
+    }
+
+    .info_spread p{
+      font-size:135%;
+    }
+
+    .cure_1_image {
+      float:center;
+      width: 50%;
+      height:75%;
+      margin-left:25%;
+      margin-top: 9%;
+    }
+
+    .info_cure p{
+      font-size:135%;   
+    }
+
   }
 
   @media screen and (max-width:1150px){
@@ -599,9 +708,17 @@
       font-size:120%;
     }
     
-    .info_origins {
+    .info_origins p{
       font-size:120%;
     }
+
+    .info_spread p{
+      font-size:120%;
+    }
+
+    .info_cure p{
+      font-size:120%;
+    }    
 
     /* container */
     .container{
@@ -636,25 +753,17 @@
       margin-right:0%;
     }
 
-    .covid_info{
-      margin-left:0%;
-      margin-right:0%;
-    }
-
     .earth_1_image{
       width: 65%;
       height:75%;
       margin-left:18%;
       margin-top: 12%;
     }
+    
     .info_intro p{
       font-size:110%;
     }
     
-    .origins_info{
-      margin-left:0%;
-      margin-right:0%;
-    }
 
     .origins_1_image{
       width: 65%;
@@ -665,6 +774,29 @@
     .info_origins p{
       font-size:110%;
     }  
+
+    .spread_1_image{
+      width: 65%;
+      height:75%;
+      margin-left:18%;
+      margin-top: 12%;
+    }
+    .info_spread p{
+      font-size:110%;
+    }  
+
+    .cure_1_image{
+      width: 65%;
+      height:75%;
+      margin-left:18%;
+      margin-top: 12%;
+    }
+    .info_cure p{
+      font-size:110%;
+    }  
+
+    
+    
 }
 
 @media screen and (max-width:930px){
@@ -695,6 +827,8 @@
 }
 
 @media screen and (max-width:721px){
+
+
     /* background header onwards */
     .earth_1_image{
       width: 65%;
@@ -727,7 +861,40 @@
 
     .info_origins p{
       margin-right:20%;
-    }    
+    } 
+    
+    .spread_1_image{
+      width: 65%;
+      height:65%;
+      margin-left:18%;
+      margin-top: 5%;
+    }
+
+    .info_spread{
+      flex: 100%;
+      max-width: 100%;
+    }
+
+    .info_spread p{
+      margin-left:20%;
+      margin-top:-15%;
+    } 
+    
+    .cure_1_image{
+      width: 65%;
+      height:65%;
+      margin-right:17%;
+      margin-bottom: 5%;
+    }
+
+    .info_cure{
+      flex: 100%;
+      max-width: 100%;
+    }
+
+    .info_cure p{
+      margin-right:20%;
+    }     
 
 /* container */
 .container{
@@ -766,6 +933,17 @@
   margin-bottom: 5%;
 }
 
+.info_cure p{
+  font-size:95%;
+}
+
+.cure_1_image{
+  width: 45%;
+  height:65%;
+  margin-left:28%;
+  margin-bottom: 5%;
+}
+
 .background_header h1{
   font-size:150%;
 }
@@ -786,6 +964,10 @@
 
     /* background header onwards */
     .info_intro p{
+      margin-top:-35%;
+    }
+
+    .info_spread p{
       margin-top:-35%;
     }
 
