button for thirdpage plus fixed

--- a/thirdpage.css
+++ b/thirdpage.css
@@ -456,6 +456,19 @@
     color: white;
   }
 
+  .the_button_quiz{
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 50px;
+    margin: 4px 2px;
+    cursor: pointer;
+    background-color: #70778E;
+  }
+
   /* ==================================================================================================================================================== */
   /* ==================================================================================================================================================== */
   /* ==================================================================================================================================================== */
