Image border on Info page

--- a/thirdpage.css
+++ b/thirdpage.css
@@ -495,6 +495,7 @@
     margin-left:25%;
     margin-top: 4%;
     opacity:90%;
+    border-radius: 25px;
     } 
  
    .info_intro p{
@@ -533,6 +534,7 @@
     margin-left:15%;
     margin-top: 4%;
     opacity:90%;
+    border-radius: 25px;
     } 
  
    .info_origins p{
@@ -571,6 +573,7 @@
     margin-left:25%;
     margin-top: 4%;
     opacity:90%;
+    border-radius: 25px;
     } 
  
    .info_spread p{
@@ -609,6 +612,7 @@
     margin-left:15%;
     margin-top: 4%;
     opacity:90%;
+    border-radius: 25px;
     } 
  
    .info_cure p{
@@ -647,6 +651,7 @@
     margin-left:25%;
     margin-top: 4%;
     opacity:90%;
+    border-radius: 25px;
     } 
  
    .info_prevention p{
