--- a/fourthpage.css
+++ b/fourthpage.css
@@ -501,6 +501,41 @@ template {
   background-color:black;
 }
 
+.parallax h2
+{
+  display:flex;
+  background-color: #FF7471;
+  color: white;
+  font-size: 35px;
+  padding: 15px 32px;
+  text-align: left;
+  justify-content: center;
+  align-items: center;
+}
+
+.parallax table
+{
+  background-color: skyblue;
+  padding-top: 15px;
+  padding-left: 30%;
+  padding-bottom: 2%;
+  font-size: 20px;
+  text-align: left;
+  width: 100%;
+  border: 1px solid black;
+}
+
+.parallax table thead
+{
+  color: black;
+  text-decoration: underline;
+}
+
+.parallax table tbody
+{
+  color: black;
+}
+
   /* End of base css */
   /* ==================================================================================================================================================== */
   /* ==================================================================================================================================================== */
